# PortfolioMaker

./: .env.production.example  .gitignore  Procfile  README.md  docker-compose.yml  package.json  pyproject.toml  requirements.txt  tree_output.txt
docker/: ollama-init.sh
docs/pdoc/: index.html  search.js
docs/pdoc/portfolio/: apps.html  models.html  permissions.html  serializers.html  services.html  tests.html  theme_presets.html  views.html
docs/pdoc/portfolio_maker/: settings.html  urls.html
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/api/: client.js
frontend/src/components/: AnalyticsCard.jsx  AppLayout.jsx  EmptyState.jsx  Ui.jsx  (+2 more)
portfolio/: __init__.py  admin.py  apps.py  models.py  ollama_client.py  permissions.py  serializers.py  services.py  tests.py  theme_presets.py  urls.py  views.py
portfolio/migrations/: 0001_initial.py  0002_alter_project_image.py  0003_rename_presentation_section_config_element_config_and_more.py  0004_portfolio_description.py  0005_portfolio_user_slug_unique_and_theme_optional.py  0006_alter_blank_config_fields.py  0007_seed_theme_presets.py  0008_portfolio_resume.py  0009_alter_element_field.py  0010_sync_theme_presets_catalog.py  0011_portfoliotemplate.py  0012_resumeupload.py  0013_rename_portfolio_p_is_acti_77effd_idx_portfolio_p_is_acti_a648cb_idx_and_more.py  0014_seed_default_portfolio_templates.py  0015_portfolioview.py  __init__.py
portfolio_maker/: __init__.py  asgi.py  middleware.py  settings.py  urls.py  wsgi.py
portolio_new/: apps.py  models.py
(+50 files in other folders)
